# avr-gcc-template

./: .clangd  CMakeLists.txt  notes.org
cmake/: avr-gcc.toolchain.cmake  libs.cmake
headers/: cfg.h  digital_io_cfg.h
headers/drivers/: digital_io.h  gpio.h
headers/hardware/: gpio.h
libs/uart/: CMakeLists.txt
libs/uart/headers/: uart.h
src/: cfg.c  main.c
src/drivers/: digital_io.c  gpio.c
src/drivers/uart/: uart.c
src/hardware/: gpio.c
